# AIOpsLab

./: .gitignore  .gitmodules  NOTICE.txt  README.md  SUPPORT.md  assessment.py  clear_cluster_state.sh  cli.py  eval.sh  generate_table.py  how_to_use_parser.md  how_to_use_the_parser.md  kind-config.yaml  parse_result.py  parse_result_flash.py  parse_result_react.py  pyproject.toml  recover_cluster.py  recover_trajectory.py  run_task.sh  service.py
TargetMicroservices/: .gitignore  README.md
TargetMicroservices/hotelReservation/: k8s-geo-mongo.sh  k8s-rate-mongo.sh
TargetMicroservices/socialNetwork/: Dockerfile
TargetMicroservices/wrk2/: .gitignore  gen_path.py
aiopslab/: config.py  config.yml  config.yml.example  evaluator.py  onboarding_evaluator.py  paths.py  session.py
aiopslab/observer/: README.md  __init__.py  log_api.py  metric_api.py  monitor_config.yaml  observe.py  trace_api.py
aiopslab/orchestrator/: __init__.py  onboarding_eval_parser.py  orchestrator.py  parser.py
aiopslab/service/: helm.py  kubectl.py  shell.py
aiopslab/utils/: actions.py  cache.py  critical_section.py  modifications.py  status.py
clients/: README.md  client.py  deepseek.py  flash.py  gpt-full.py  gpt.py  gpt_managed_identity.py  granite-full.py  launch_vllm.sh  llama-full.py  qwen.py  react.py  registry.py  vllm.py
clients/configs/: .gitignore  (+1 more)
github.io/: README.md  mkdocs.yml
kind/: Dockerfile  README.md  images.txt  kind-config-arm.yaml  kind-config-x86.yaml  kind-config.yaml  load_images.sh  pull_images.sh
scripts/: README.md  kube_install.sh  setup.sh  utils.sh
(+381 files in other folders)
