[tool.poetry]
name = "aiopslab"
version = "0.1.0"
description = "benchmark and eval framework for AI powered DevOps"
authors = ["Manish Shetty", "Yinfang Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
importlib = "^1.0.4"
black = "^24.4.2"
pyright = "^1.1.366"
openai = "^1.33.0"
pydantic = "^2.7.4"
kubernetes = "^30.1.0"
colorama = "^0.4.6"
rich = "^13.7.1"
tiktoken = "^0.7.0"
prompt-toolkit = "^3.0.47"
prometheus-api-client = "^0.5.5"
autogen-agentchat = "^0.2.40"
azure-identity = "^1.19.0"
azure-ai-ml = "^1.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
